# PostVerse

./: .flake8  .gitignore  Makefile  README.rst  manage.py  pyproject.toml
.github/workflows/: django.yml
PostVerse/: asgi.py  authentication.py  urls.py  wsgi.py
PostVerse/settings/: __init__.py  base.py  rest_framework.py
accounts/: serializers.py  urls.py  views.py
accounts/tests/: registered_users_tests_base.py  test_change_password.py  test_delete_user.py  test_user_fetch.py  test_user_login.py  test_user_login_token.py  test_user_logout.py  test_user_registration.py  test_user_token_refresh.py  test_user_verify_authentication.py
docs/: PostVerse API.postman_collection.json
posts/: models.py  serializer.py  urls.py  views.py
posts/migrations/: 0001_initial.py  0002_alter_post_text.py
posts/tests/: test_post_model.py  test_posts.py  test_posts_create.py  test_posts_delete.py  test_posts_edit.py  test_posts_fetch.py
posts/tests/utils/: PostFactory.py  generate_post_data.py
postverse/: manage.py
postverse/accounts/: serializers.py  tests.py  urls.py  views.py
postverse/accounts/tests/: test_change_password.py  test_user_login_token.py  test_user_registration.py
postverse/postverse/: asgi.py  urls.py  wsgi.py
postverse/postverse/settings/: __init__.py  base.py  rest_framework.py
profiles/: admin.py  models.py  serializers.py  urls.py  views.py
profiles/migrations/: 0001_initial.py
profiles/tests/: test_user_profile_fetch.py  test_user_profile_update.py  user_profile_tests.py
tests/utils/: create_user.py  registered_users_tests_base.py
(+1 files in other folders)
