[tool.poetry]
name = "postverse"
version = "0.5.2"
description = ""
authors = ["ashutosh29599 <ashutosh29599@yahoo.co.in>"]
license = "MIT"
readme = "README.rst"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.1"
djangorestframework = "^3.15.2"
django-split-settings = "^1.3.2"
djangorestframework-simplejwt = "^5.3.1"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
